# akkor-hotel-back

./: .env.example  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/controllers/: bookingController.py  hotelController.py  hotelImageController.py  hotelPictureController.py  roomController.py  userController.py  userHotelController.py
app/managers/: databaseManager.py  s3Manager.py
app/models/: __init__.py  hotelImageModel.py  hotelModel.py  hotelPictureModel.py  roomModel.py  userHotelModel.py  userModel.py  userRoleModel.py
app/schemas/: hotelImageSchemas.py  hotelPictureSchemas.py  hotelSchemas.py  roomSchemas.py  userHotelSchemas.py  userRoleSchemas.py  userSchemas.py
app/services/: bookingService.py  hotelImageService.py  hotelPictureService.py  hotelService.py  userHotelService.py  userService.py
app/tests/: booking_functional_test.py  booking_test.py  conftest.py  database_test.py  hotel_functional_test.py  hotel_test.py  room_functional_test.py  room_test.py  s3_test.py  userRole_functional_test.py  user_functional_test.py  user_test.py
db-init/: init-db.sql
