[tool.poetry]
name = "akkor-hotel-api"
version = "0.1.0"
description = ""
authors = ["Gabriel Titeux <72764917+Xelone28@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pytest = "^8.3.4"
sqlalchemy = "^2.0.38"
databases = "^0.9.0"
asyncpg = "^0.30.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
moto = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
